# url-normalize

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py  tox.ini  url_normalize.py
.github/workflows/: ci.yml  linter.yml  publish.yml
tests/: test_cli.py  test_deconstruct_url.py  test_generic_url_cleanup.py  test_normalize_fragment.py  test_normalize_host.py  test_normalize_path.py  test_normalize_port.py  test_normalize_query.py  test_normalize_query_filters.py  test_normalize_scheme.py  test_normalize_userinfo.py  test_provide_url_domain.py  test_provide_url_scheme.py  test_reconstruct_url.py  test_tools.py  test_url_humanize.py  test_url_normalize.py
url_normalize/: __init__.py  cli.py  generic_url_cleanup.py  normalize_fragment.py  normalize_host.py  normalize_path.py  normalize_query.py  param_allowlist.py  provide_url_scheme.py  test_url_normalize.py  tools.py  url_humanize.py  url_normalize.py
